Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Fixed the cache of the portlet_contact_info custom portlet so that the portlet
  provide a correct accessibility link for each virtual hosts.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Less restrictive permission check to allow
  a user to use the form in folder_contents
  was: 'Delete Folder', now is: 'Modify Portal Content'
  because the form button now handles correctly
  each perm.
- Removed obsolete widget types registration.
- tune #1133: getSortedContentTypes.py is too slow