@@ -17,3 +17,5 @@ New internal features:
   each perm.
 - Removed obsolete widget types registration.
 - tune #1133: getSortedContentTypes.py is too slow
+- effective_date gets automatically updated at publish time (in
+  section_content_wf) if no specific dates were set by the user
